--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TW Coming Soon | Free Tailwindcss theme by Fyrestrap</title>
+  <title>K M K C</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +39,7 @@
   <header class="w-full bg-[url('assets/img/leaves.jpg')] bg-cover bg-bottom">  
     <div class="w-full min-h-screen md:w-1/2 bg-gradient-to-b from-gray-900/90 to-gray-900/95 p-10 flex">
       <div class="w-full text-center my-auto">
-        <h1 class="font-bold text-5xl font-Comforter-Brush text-amber-500 mb-10 md:text-right">Launcher.</h1>
+        <h1 class="font-bold text-5xl font-Comforter-Brush text-amber-500 mb-10 md:text-right">K M K C.</h1>
         <h6 class="font-Montserrat font-bold uppercase text-4xl md:text-5xl lg:text-6xl mb-14 md:-mr-20 text-white md:text-right">Coming <span class="text-white/70 md:-mr-20">soon</span></h6>
 
         
@@ -70,7 +70,9 @@
         </div>
 
         <!-- Content -->
-        <p class="text-base mb-10 text-gray-200 md:text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta reprehenderit delectus quasi eligendi maiores consectetur repellat necessitatibus libero deleniti quaerat debitis, odit earum modi. Magni porro iste dolores. </p>
+        <p class="text-base mb-10 text-gray-200 md:text-right">KMKC LLC, a Projects management company a Dubai- Emirates-based healthcare organization that offers a broad spectrum of solutions and services for the Gulf & Middle East community. It also caters to healthcare providers and patients living in the U.S. and overseas.
+KMKC management is associated with Indiana University one of the big medical school compasses in the U.S and R3 Gulf (Stem Cells Corp) located in Phoenix Arizona in the U.S, we provide critical opportunities to foster relationships between the healthcare sector in the Gulf region and the Middle East and the U.S. health service providers. This way, we deal in innovative business opportunities, hospital operations, Concierge Patients Service Coordination, and Navigation.
+Our physicians have access to world-class training medical programs, which include hands-on training, Medical Exhibition, conferences, and CME. </p>
 
         <!-- Social media -->
         <div class="w-full text-left flex">
