Update3 index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <!-- Content -->
-        <p class="text-base mb-10 text-gray-200 md:text-right">KMKC LLC, a Projects management company a Dubai- Emirates-based healthcare organization that offers a broad spectrum of solutions and services for the Gulf & Middle East community. It also caters to healthcare providers and patients living in the U.S. and overseas.
+        <p class="text-base mb-10 text-gray-200 md:text-left">KMKC LLC, a Projects management company a Dubai- Emirates-based healthcare organization that offers a broad spectrum of solutions and services for the Gulf & Middle East community. It also caters to healthcare providers and patients living in the U.S. and overseas.
 KMKC management is associated with Indiana University one of the big medical school compasses in the U.S and R3 Gulf (Stem Cells Corp) located in Phoenix Arizona in the U.S, we provide critical opportunities to foster relationships between the healthcare sector in the Gulf region and the Middle East and the U.S. health service providers. This way, we deal in innovative business opportunities, hospital operations, Concierge Patients Service Coordination, and Navigation.
 Our physicians have access to world-class training medical programs, which include hands-on training, Medical Exhibition, conferences, and CME. </p>
 
